--- a/CreArte/Views/Shared/_Layout.cshtml
+++ b/CreArte/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <!-- Estilos de la app -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/PantallaPrincipal.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/UsuarioIndex.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Index.css" asp-append-version="true" />
     @* <link rel="stylesheet" href="~/css/UsuarioCreate.css" asp-append-version="true" /> *@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/litepicker@2.0.12/dist/css/litepicker.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
